fix issues with compress/expand in alignment

--- a/projects/web-mev/src/app/d3/components/spatialge-clusters/spatialge-clusters.component.scss
+++ b/projects/web-mev/src/app/d3/components/spatialge-clusters/spatialge-clusters.component.scss
@@ -287,3 +287,12 @@ mat-slider {
     display: flex;
     margin-left: 10px;
 }
+
+.tipHeader{
+    font-weight: bold;
+}
+
+.plotContainer{
+    margin-left: 0px;
+    margin-top: 0px;
+}
