--- a/projects/web-mev/src/app/d3/components/spotlight/spotlight.component.scss
+++ b/projects/web-mev/src/app/d3/components/spotlight/spotlight.component.scss
@@ -1,304 +1,3 @@
-// .analysis-card__img {
-//     background-image: url("~assets/icons/ct-scan.png");
-//     background-size: 30px;
-//     background-position: top right;
-//     background-repeat: no-repeat;
-// }
-
-// .analysis-card__content {
-//     padding-top: 1rem;
-// }
-
-// .overlayDiv,
-// .sideBySideDiv {
-//     display: flex;
-// }
-
-// .overlayDiv {
-//     margin-top: 10px;
-//     position: relative;
-//     width: fit-content;
-//     overflow: hidden;
-//     margin-right: 10px;
-// }
-
-// .overlayContainer {
-//     overflow: hidden;
-// }
-
-// .downloadButtonContainer {
-//     position: absolute;
-// }
-
-// #radio-group-axis {
-//     display: block;
-//     font-weight: bold;
-//     margin: 6px 0;
-// }
-// .labelTitle {
-//     font-weight: bold;
-//     margin: 6px 0;
-// }
-
-// #modes-label {
-//     display: block;
-//     font-weight: bold;
-//     margin: 6px 0;
-// }
-
-// .displayValue {
-//     font-weight: 200;
-// }
-
-// mat-slider {
-//     width: 100px;
-// }
-
-// .displayImageSideBySide {
-//     margin-left: 20px;
-// }
-
-// .displayPlotSideBySide {
-//     position: relative;
-// }
-
-// .slider {
-//     width: 50vw;
-//     margin-top: 20px;
-// }
-
-// #image {
-//     display: block;
-
-//     /* This rule is very important, please don't ignore this */
-//     max-width: 100%;
-// }
-
-// .mat-mdc-radio-button ~ .mat-mdc-radio-button {
-//     margin-left: 16px;
-// }
-
-// .example-radio-group {
-//     display: flex;
-// }
-
-// .radio-container {
-//     margin-right: 10px;
-// }
-
-// .inputContainer {
-//     display: flex;
-//     flex-direction: row;
-//     width: 250px;
-// }
-
-// .searchButton {
-//     margin: 8px;
-//     height: 40px;
-//     padding: 0px;
-// }
-
-// .smaller-input {
-//     width: 500px;
-// }
-
-// ::ng-deep {
-//     .d3-tip {
-//         margin: 1rem 0;
-//         padding: 8px;
-//         position: fixed;
-//         z-index: 1000;
-//         font-size: 11px;
-//         border-radius: 3px;
-//         box-shadow: 2px 2px 4px rgb(0 0 0 / 10%);
-//         background-color: rgba(255, 255, 255, 0.7);
-//         border: 1px solid #d9d9d9;
-//         color: rgba(0, 0, 0, 0.9);
-//     }
-
-//     .d3-tip table th,
-//     td {
-//         padding: 5px 10px;
-//     }
-
-//     .category {
-//         display: inline;
-//         font-weight: 500;
-//         color: rgba(0, 0, 0, 0.9);
-//     }
-
-//     .horizontalSliderContainer,
-//     .verticalSliderContainer {
-//         z-index: 99;
-//     }
-
-//     .horizontalSliderContainer .mat-slider-thumb,
-//     .verticalSliderContainer .mat-slider-thumb {
-//         background-color: #68666f !important;
-//     }
-
-//     .verticalSliderContainer .mat-slider {
-//         left: -20px !important;
-//         width: 0px !important;
-//     }
-
-//     .horizontalSliderContainer .mat-slider {
-//         left: 20px !important;
-//         bottom: 15px !important;
-//     }
-// }
-
-// .custom-button {
-//     width: 36px;
-//     height: 36px;
-//     min-width: 38px !important;
-//     padding: 0px !important;
-//     margin: -3px;
-//     transform: scale(0.75);
-// }
-
-// .drop-zone {
-//     border: 2px dashed #ccc;
-//     border-radius: 10px;
-//     padding: 20px;
-//     text-align: center;
-//     cursor: pointer;
-//     margin-top: 50px;
-// }
-
-// .drop-message {
-//     color: #666;
-// }
-
-// #downloadButton {
-//     height: fit-content;
-//     position: absolute;
-//     top: 0;
-//     right: 0;
-// }
-
-// .searchContainer {
-//     width: 400px;
-// }
-
-// .rotate-90 {
-//     transform: rotate(90deg);
-// }
-
-// .image-container {
-//     overflow: hidden;
-//     position: relative;
-// }
-
-// .image-container img {
-//     position: absolute;
-// }
-
-// .zoomContainer {
-//     margin-left: 50px;
-// }
-
-// .miniMapContainer {
-//     position: absolute;
-// }
-
-// .zoomButtonContainer {
-//     display: flex;
-//     flex-direction: column;
-//     transform: scale(0.5);
-//     position: absolute;
-//     right: 0;
-//     bottom: 10px;
-//     z-index: 100;
-// }
-
-// .zoomButtonContainerNoImage {
-//     display: flex;
-//     flex-direction: column;
-//     transform: scale(0.5);
-//     position: absolute;
-//     right: 160px;
-//     bottom: 10px;
-//     z-index: 100;
-// }
-
-// .zoomButton {
-//     background-color: #fff;
-//     border-radius: 4px;
-//     cursor: pointer;
-
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     padding: 5px;
-//     margin: 1px;
-// }
-
-// .disabled-label {
-//     color: #999;
-//     pointer-events: none;
-// }
-
-// .nonOverlay {
-//     margin-top: 10px;
-//     overflow: hidden;
-// }
-
-// .hiddenDiv {
-//     display: none;
-// }
-
-// .noDataDiv {
-//     margin: 40px 0 60px;
-//     color: gray;
-// }
-
-// .minimapPlotContainer {
-//     position: absolute;
-// }
-
-// .instructions_text {
-//     color: rgba(0, 0, 0, 0.8);
-//     width: 50vw;
-// }
-
-// ::ng-deep .mat-expansion-panel {
-//     border: none !important;
-//     box-shadow: none !important;
-// }
-
-// ::ng-deep .mat-expansion-panel-body {
-//     padding: 0 !important;
-// }
-
-// ::ng-deep .default-theme .mat-expansion-panel {
-//     margin-top: -15px;
-//     margin-bottom: 50px;
-// }
-
-// ::ng-deep .mat-expansion-panel-header {
-//     margin: 0 !important;
-//     font-weight: 400;
-// }
-
-// .mat-expansion-panel-header:hover {
-//     background-color: white;
-// }
-// .mat-expansion-panel-header {
-//     padding: 0px !important;
-//     font-weight: bold;
-//     font-size: 14px !important;
-// }
-
-// .analyses-header__icon {
-//     font-size: 14px;
-// }
-
-// .fullOverlayDiv {
-//     display: flex;
-//     margin-left: 10px;
-// }
-
 .analysis-card__img {
     background-image: url("~assets/icons/ct-scan.png");
     background-size: 30px;
@@ -591,4 +290,9 @@ mat-slider {
 
 .tipHeader{
     font-weight: bold;
+}
+
+.plotContainer{
+    margin-left: 0px;
+    margin-top: 0px;
 }
